force-app/main/default/objects/Product2/fields/Dev_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Dev_Grouping__c</fullName>
    <label>Dev Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Type 1</fullName>
            </value>
            <value>
                <fullName>Payment Type 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>