force-app/main/default/objects/Product2/fields/IFI_Category__c.field-meta.xml
<CustomField>
    <fullName>IFI_Category__c</fullName>
    <description>From File &quot;Cost Code Mapping Template&quot; sent 6/8/2021</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>