force-app/main/default/objects/Product2/fields/IFI_Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>IFI_Cost_Code__c</fullName>
    <externalId>true</externalId>
    <label>Cost Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>