force-app/main/default/objects/Product2/fields/IFI_Cost_Code_Product__c.field-meta.xml
<CustomField>
    <fullName>IFI_Cost_Code_Product__c</fullName>
    <formula>IFI_Cost_Code__c  &amp; &quot; &quot; &amp;  Name</formula>
    <label>Cost Code Product</label>
    <type>Text</type>
</CustomField>