force-app/main/default/objects/Product2/fields/IFI_Forecast_Group__c.field-meta.xml
<CustomField>
    <fullName>IFI_Forecast_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to group PO Cost Code Engine to Planfuls Forecast</inlineHelpText>
    <label>Forecast Group</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>