force-app/main/default/objects/Product2/fields/IFI_GLAccountGroup__c.field-meta.xml
<CustomField>
    <fullName>IFI_GLAccountGroup__c</fullName>
    <label>GL Account Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>40100-NRR-Retail COLO Revenue</fullName>
            </value>
            <value>
                <fullName>40100-RR-Retail COLO Revenue</fullName>
            </value>
            <value>
                <fullName>41000-NRR-Connectivity Revenue</fullName>
            </value>
            <value>
                <fullName>41000-RR-Connectivity Revenue</fullName>
            </value>
            <value>
                <fullName>45100-NRR-Storage Services Standard</fullName>
            </value>
            <value>
                <fullName>45100-RR-Storage Services Standard</fullName>
            </value>
            <value>
                <fullName>46000-NRR-Cloudramp Services Revenue</fullName>
            </value>
            <value>
                <fullName>46000-RR-Cloudramp Services Revenue</fullName>
            </value>
            <value>
                <fullName>40000-NRR-Wholesale COLO Revenue</fullName>
            </value>
            <value>
                <fullName>40000-RR-Wholesale COLO Revenue</fullName>
            </value>
            <value>
                <fullName>40500-NRR-NRC Setup/Startup</fullName>
            </value>
            <value>
                <fullName>40500-RR-NRC Setup/Startup</fullName>
            </value>
            <value>
                <fullName>40600-NRR-Carrier Services</fullName>
            </value>
            <value>
                <fullName>40600-RR-Carrier Services</fullName>
            </value>
            <value>
                <fullName>41001-NRR-Connectivity Revenue:Fiber Termination Panel</fullName>
            </value>
            <value>
                <fullName>41001-RR-Connectivity Revenue:Fiber Termination Panel</fullName>
            </value>
            <value>
                <fullName>41002-NRR-Connectivity Revenue:Cross Connect</fullName>
            </value>
            <value>
                <fullName>41002-RR-Connectivity Revenue:Cross Connect</fullName>
            </value>
            <value>
                <fullName>42000-NRR-Hosting Services Revenue</fullName>
            </value>
            <value>
                <fullName>42000-RR-Hosting Services Revenue</fullName>
            </value>
            <value>
                <fullName>43000-NRR-Managed Services Revenue</fullName>
            </value>
            <value>
                <fullName>43000-RR-Managed Services Revenue</fullName>
            </value>
            <value>
                <fullName>44000-NRR-Consulting/ Hands-on Revenue</fullName>
            </value>
            <value>
                <fullName>44000-RR-Consulting/ Hands-on Revenue</fullName>
            </value>
            <value>
                <fullName>45000-NRR-Storage Services Revenue</fullName>
            </value>
            <value>
                <fullName>45000-RR-Storage Services Revenue</fullName>
            </value>
            <value>
                <fullName>45200-NRR-Storage Services Overage</fullName>
            </value>
            <value>
                <fullName>45200-RR-Storage Services Overage</fullName>
            </value>
            <value>
                <fullName>45300-NRR-Storage Download Overage</fullName>
            </value>
            <value>
                <fullName>45300-RR-Storage Download Overage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>