force-app/main/default/objects/Product2/fields/IFI_Inflow_Outflow__c.field-meta.xml
<CustomField>
    <fullName>IFI_Inflow_Outflow__c</fullName>
    <label>Inflow/Outflow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inflow</fullName>
            </value>
            <value>
                <fullName>Outflow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>