force-app/main/default/objects/Product2/fields/IFI_IntacctItemID__c.field-meta.xml
<CustomField>
    <fullName>IFI_IntacctItemID__c</fullName>
    <displayFormat>IT{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Intacct Item ID</label>
    <type>AutoNumber</type>
</CustomField>