force-app/main/default/objects/Product2/fields/IFI_IsNonRecurring__c.field-meta.xml
<CustomField>
    <fullName>IFI_IsNonRecurring__c</fullName>
    <formula>ISBLANK(IFI_NonRecurringProduct__c)</formula>
    <label>Is Non-Recurring</label>
    <type>Checkbox</type>
</CustomField>