force-app/main/default/objects/Product2/fields/IFI_IsRecurring__c.field-meta.xml
<CustomField>
    <fullName>IFI_IsRecurring__c</fullName>
    <formula>ISBLANK(IFI_RecurringProduct__c)</formula>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>