force-app/main/default/objects/Product2/fields/IFI_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>IFI_Item_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Category</label>
    <referenceTo>IFI_Item_Category__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>