force-app/main/default/objects/Product2/fields/IFI_Legacy__c.field-meta.xml
<CustomField>
    <fullName>IFI_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legacy Product Exists Prior to ERP Migration 10/2021 Go-Live</description>
    <label>Legacy</label>
    <type>Checkbox</type>
</CustomField>