force-app/main/default/objects/Product2/fields/IFI_LowerRollup__c.field-meta.xml
<CustomField>
    <fullName>IFI_LowerRollup__c</fullName>
    <label>Lower Rollup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>