force-app/main/default/objects/Product2/fields/IFI_NonRecurringProduct__c.field-meta.xml
<CustomField>
    <fullName>IFI_NonRecurringProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non Recurring Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Non Recurring Product)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>