force-app/main/default/objects/Product2/fields/IFI_ParentGrouping__c.field-meta.xml
<CustomField>
    <fullName>IFI_ParentGrouping__c</fullName>
    <label>Parent Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>