force-app/main/default/objects/Product2/fields/IFI_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>IFI_Payment_Type__c</fullName>
    <description>From file &quot;Cost Code Mapping Template.xlsx&quot; 6/8/2021</description>
    <label>Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>