force-app/main/default/objects/Product2/fields/IFI_RecurringProduct__c.field-meta.xml
<CustomField>
    <fullName>IFI_RecurringProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products(Recurring Product)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>