force-app/main/default/objects/Product2/fields/IFI_Unit_Based__c.field-meta.xml
<CustomField>
    <fullName>IFI_Unit_Based__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Unit Based?</label>
    <type>Checkbox</type>
</CustomField>